[gd_scene load_steps=13 format=3 uid="uid://crtk4ey1dcsr4"]

[ext_resource type="Script" uid="uid://y5jmxyksgjji" path="res://scripts/ui/pop_up.gd" id="1_0a5f3"]
[ext_resource type="Texture2D" uid="uid://davk3as2tq5ut" path="res://art/textures/GUI_Assets.png" id="1_k3ym5"]
[ext_resource type="Texture2D" uid="uid://bqs3gw33e3f2u" path="res://art/textures/fen.png" id="3_1htk0"]

[sub_resource type="AtlasTexture" id="AtlasTexture_l1do4"]
atlas = ExtResource("1_k3ym5")
region = Rect2(176, 0, 7, 7)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1htk0"]
texture = ExtResource("1_k3ym5")
texture_margin_left = 3.0
texture_margin_top = 3.0
texture_margin_right = 3.0
texture_margin_bottom = 3.0
expand_margin_left = 1.0
expand_margin_top = 2.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0
region_rect = Rect2(32, 0, 32, 32)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_q3i2e"]
texture = ExtResource("1_k3ym5")
expand_margin_top = 1.0
region_rect = Rect2(208, 16, 10, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_b741m"]
atlas = ExtResource("1_k3ym5")
region = Rect2(184, 8, 7, 7)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_c7dy5"]
texture = ExtResource("1_k3ym5")
texture_margin_left = 3.0
texture_margin_top = 3.0
texture_margin_right = 3.0
texture_margin_bottom = 3.0
expand_margin_left = 1.0
expand_margin_top = 2.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0
region_rect = Rect2(32, 0, 32, 32)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_pyip5"]
texture = ExtResource("1_k3ym5")
expand_margin_top = 1.0
region_rect = Rect2(228, 16, 10, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_0v7bq"]
atlas = ExtResource("1_k3ym5")
region = Rect2(184, 0, 7, 7)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_b6nfr"]
texture = ExtResource("1_k3ym5")
texture_margin_left = 3.0
texture_margin_top = 3.0
texture_margin_right = 3.0
texture_margin_bottom = 3.0
expand_margin_left = 1.0
expand_margin_top = 2.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0
region_rect = Rect2(32, 0, 32, 32)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ck02a"]
texture = ExtResource("1_k3ym5")
expand_margin_top = 1.0
region_rect = Rect2(198, 16, 10, 15)

[node name="GUI_POPUP" type="Control"]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -648.0
offset_bottom = -648.0
grow_vertical = 0
script = ExtResource("1_0a5f3")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -4.0
grow_vertical = 0

[node name="Control" type="Control" parent="VBoxContainer"]
layout_mode = 2

[node name="Background" type="NinePatchRect" parent="VBoxContainer/Control"]
z_index = -3
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -128.0
offset_right = 161.0
offset_bottom = 5.0
grow_vertical = 0
texture = ExtResource("1_k3ym5")
region_rect = Rect2(96, 0, 32.077, 32)
patch_margin_left = 11
patch_margin_top = 11
patch_margin_right = 11
patch_margin_bottom = 11

[node name="STR" type="Label" parent="VBoxContainer/Control"]
layout_mode = 0
offset_left = 2.0
offset_top = 1.0
offset_right = 36.0
offset_bottom = 18.0
tooltip_text = "Strength"
mouse_filter = 0
text = "STR"
horizontal_alignment = 1

[node name="Mnd" type="Label" parent="VBoxContainer/Control"]
layout_mode = 0
offset_left = 33.0
offset_top = 1.0
offset_right = 67.0
offset_bottom = 18.0
tooltip_text = "Mind"
mouse_filter = 0
text = "Mnd"
horizontal_alignment = 1

[node name="SPD" type="Label" parent="VBoxContainer/Control"]
layout_mode = 0
offset_left = 64.0
offset_top = 1.0
offset_right = 98.0
offset_bottom = 18.0
tooltip_text = "Speed"
mouse_filter = 0
text = "SPD"
horizontal_alignment = 1

[node name="FCS" type="Label" parent="VBoxContainer/Control"]
layout_mode = 0
offset_left = 94.0
offset_top = 1.0
offset_right = 128.0
offset_bottom = 18.0
tooltip_text = "Focus"
mouse_filter = 0
text = "FCS"
horizontal_alignment = 1

[node name="EDR" type="Label" parent="VBoxContainer/Control"]
layout_mode = 0
offset_left = 125.0
offset_top = 1.0
offset_right = 159.0
offset_bottom = 18.0
tooltip_text = "Endurance"
mouse_filter = 0
text = "EDR"
horizontal_alignment = 1

[node name="Strength" type="Label" parent="VBoxContainer/Control"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 2.0
offset_top = 15.0
offset_right = 36.0
offset_bottom = 32.0
tooltip_text = "Strength"
mouse_filter = 0
text = "1"
horizontal_alignment = 1

[node name="Mind" type="Label" parent="VBoxContainer/Control"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 33.0
offset_top = 15.0
offset_right = 67.0
offset_bottom = 32.0
tooltip_text = "Mind"
mouse_filter = 0
text = "1"
horizontal_alignment = 1

[node name="Speed" type="Label" parent="VBoxContainer/Control"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 64.0
offset_top = 15.0
offset_right = 98.0
offset_bottom = 32.0
tooltip_text = "Speed"
mouse_filter = 0
text = "1"
horizontal_alignment = 1

[node name="Focus" type="Label" parent="VBoxContainer/Control"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 95.0
offset_top = 15.0
offset_right = 129.0
offset_bottom = 32.0
tooltip_text = "Focus"
mouse_filter = 0
text = "1"
horizontal_alignment = 1

[node name="Endurance" type="Label" parent="VBoxContainer/Control"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 125.0
offset_top = 15.0
offset_right = 159.0
offset_bottom = 32.0
tooltip_text = "Endurance"
mouse_filter = 0
text = "1"
horizontal_alignment = 1

[node name="Background2" type="NinePatchRect" parent="VBoxContainer/Control"]
z_index = -3
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = -3.0
offset_right = 41.0
offset_bottom = 35.0
grow_vertical = 0
texture = ExtResource("1_k3ym5")
region_rect = Rect2(96, 0, 32.077, 32)
patch_margin_left = 11
patch_margin_top = 11
patch_margin_right = 11
patch_margin_bottom = 11

[node name="Background3" type="NinePatchRect" parent="VBoxContainer/Control"]
z_index = -3
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = -3.0
offset_right = 72.0
offset_bottom = 35.0
grow_vertical = 0
texture = ExtResource("1_k3ym5")
region_rect = Rect2(96, 0, 32.077, 32)
patch_margin_left = 11
patch_margin_top = 11
patch_margin_right = 11
patch_margin_bottom = 11

[node name="Background4" type="NinePatchRect" parent="VBoxContainer/Control"]
z_index = -3
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 61.0
offset_top = -3.0
offset_right = 103.0
offset_bottom = 35.0
grow_vertical = 0
texture = ExtResource("1_k3ym5")
region_rect = Rect2(96, 0, 32.077, 32)
patch_margin_left = 11
patch_margin_top = 11
patch_margin_right = 11
patch_margin_bottom = 11

[node name="Background5" type="NinePatchRect" parent="VBoxContainer/Control"]
z_index = -3
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 92.0
offset_top = -3.0
offset_right = 134.0
offset_bottom = 35.0
grow_vertical = 0
texture = ExtResource("1_k3ym5")
region_rect = Rect2(96, 0, 32.077, 32)
patch_margin_left = 11
patch_margin_top = 11
patch_margin_right = 11
patch_margin_bottom = 11

[node name="Background6" type="NinePatchRect" parent="VBoxContainer/Control"]
z_index = -3
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 122.0
offset_top = -3.0
offset_right = 164.0
offset_bottom = 35.0
grow_vertical = 0
texture = ExtResource("1_k3ym5")
region_rect = Rect2(96, 0, 32.077, 32)
patch_margin_left = 11
patch_margin_top = 11
patch_margin_right = 11
patch_margin_bottom = 11

[node name="Icon" type="NinePatchRect" parent="VBoxContainer/Control"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = -97.0
offset_right = 38.0
offset_bottom = -64.0
grow_vertical = 0
texture = ExtResource("1_k3ym5")
region_rect = Rect2(128, 0, 32, 32)
patch_margin_left = 11
patch_margin_top = 11
patch_margin_right = 11
patch_margin_bottom = 11

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/Control/Icon"]
clip_contents = true
layout_mode = 0
offset_right = 28.0
offset_bottom = 28.0
color = Color(1, 1, 1, 0)

[node name="Icon_texture" type="TextureRect" parent="VBoxContainer/Control/Icon/ColorRect"]
unique_name_in_owner = true
z_index = -1
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = -25.0
offset_right = 33.0
offset_bottom = 26.0
grow_vertical = 0
texture = ExtResource("3_1htk0")
stretch_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Control"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -86.0
offset_right = 145.0
offset_bottom = -9.0
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Control/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 7

[node name="CharacterName" type="Label" parent="VBoxContainer/Control/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
horizontal_alignment = 1

[node name="Type" type="Label" parent="VBoxContainer/Control/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
horizontal_alignment = 1

[node name="Level" type="Label" parent="VBoxContainer/Control/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
horizontal_alignment = 1

[node name="Health_Icon" type="TextureRect" parent="VBoxContainer/Control/HBoxContainer/VBoxContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_l1do4")
stretch_mode = 2

[node name="HealthBar" type="ProgressBar" parent="VBoxContainer/Control/HBoxContainer/VBoxContainer/Health_Icon"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -7.0
offset_right = 66.0
offset_bottom = -1.0
grow_vertical = 0
theme_override_styles/background = SubResource("StyleBoxTexture_1htk0")
theme_override_styles/fill = SubResource("StyleBoxTexture_q3i2e")
value = 80.0
show_percentage = false

[node name="HealthText" type="Label" parent="VBoxContainer/Control/HBoxContainer/VBoxContainer/Health_Icon/HealthBar"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 62.0
offset_top = -5.0
offset_right = 106.0
offset_bottom = 9.0
text = "100/100"

[node name="Magic_Icon" type="TextureRect" parent="VBoxContainer/Control/HBoxContainer/VBoxContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_b741m")
stretch_mode = 2

[node name="MagicBar" type="ProgressBar" parent="VBoxContainer/Control/HBoxContainer/VBoxContainer/Magic_Icon"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -6.0
offset_right = 66.0
grow_vertical = 0
theme_override_styles/background = SubResource("StyleBoxTexture_c7dy5")
theme_override_styles/fill = SubResource("StyleBoxTexture_pyip5")
value = 80.0
show_percentage = false

[node name="MagicText" type="Label" parent="VBoxContainer/Control/HBoxContainer/VBoxContainer/Magic_Icon"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 72.0
offset_top = -4.0
offset_right = 116.0
offset_bottom = 10.0
text = "100/100"

[node name="Sanity_Icon" type="TextureRect" parent="VBoxContainer/Control/HBoxContainer/VBoxContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_0v7bq")
stretch_mode = 2

[node name="SanityBar" type="ProgressBar" parent="VBoxContainer/Control/HBoxContainer/VBoxContainer/Sanity_Icon"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -6.0
offset_right = 66.0
grow_vertical = 0
theme_override_styles/background = SubResource("StyleBoxTexture_b6nfr")
theme_override_styles/fill = SubResource("StyleBoxTexture_ck02a")
value = 80.0
show_percentage = false

[node name="SanityText" type="Label" parent="VBoxContainer/Control/HBoxContainer/VBoxContainer/Sanity_Icon"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 72.0
offset_top = -3.0
offset_right = 116.0
offset_bottom = 11.0
text = "100/100"

[node name="Control2" type="Control" parent="VBoxContainer"]
visible = false
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Control2"]
layout_mode = 0
offset_left = 5.0
offset_top = -5.0
offset_right = 113.0
offset_bottom = 23.0

[node name="Button" type="Button" parent="VBoxContainer/Control2/HBoxContainer"]
layout_mode = 2
text = "1"

[node name="Button2" type="Button" parent="VBoxContainer/Control2/HBoxContainer"]
layout_mode = 2
text = "2"

[node name="Button3" type="Button" parent="VBoxContainer/Control2/HBoxContainer"]
layout_mode = 2
text = "3"

[node name="Button4" type="Button" parent="VBoxContainer/Control2/HBoxContainer"]
layout_mode = 2
text = "4"

[node name="Button5" type="Button" parent="VBoxContainer/Control2/HBoxContainer"]
layout_mode = 2
text = "5"

[node name="Button6" type="Button" parent="VBoxContainer/Control2/HBoxContainer"]
layout_mode = 2
text = "6"
